# advent-of-code

./: .gitignore  README.md  commit-msg  setup.cfg
2015/01/: main.py  puzzle.md
2015/02/: main.py  puzzle.md
2015/03/: main.py  puzzle.md
2015/04/: main.py  puzzle.md
2015/05/: main.py  puzzle.md
2015/06/: main.py  puzzle.md
2015/07/: main.py  prompt.md
2016/01/: main.py  prompt.md
2016/02/: main.py  readme.md
2016/03/: main.py  prompt.md
2016/05/: main.py  prompt.md
2016/06/: main.py  readme.md
2017/01/: main.py  prompt.md
2017/02/: main.py  prompt.md
2017/03/: main.py  puzzle.md
2017/04/: main.py
2017/05/: main.py  readme.md
2017/06/: main.py  readme.md
2017/07/: main.py  readme.md
2017/08/: main.py  readme.md
2017/09/: main.py  puzzle.md
2017/10/: main.py  prompt.md  puzzle.md
2017/11/: main.py  puzzle.md
2018/01/: main.py
2019/: README.md
2019/1/: README.md  main.py
2019/2/: README.md  main.py
2019/3/: README.md  main.py
2019/4/: README.md  main.py
2019/5/: README.md  main.py
2019/6/: README.md  main.py
2019/7/: main.py
2019/8/: main.py
2020/: README.md
2020/02/: README.md  main.py
2020/04/: README.md  main.py
2020/05/: README.md  main.py
2020/06/: README.md  main.py
2020/07/: README.md  main.py
2020/08/: README.md  main.py
aoc/: __init__.py  __main__.py  aoc_token.py  api.py  get_input.py  get_puzzle.py  grid.py  integers.py  ints.py  load_puzzle.py  new_script.py  paragraph.py  parse_text.py  paths.py  script.py  solution.py  status.py  string.py  submit.py  submit_puzzle.py  tests.py
(+133 files in other folders)
