[flake8]
ignore = E,F403,F401

[metadata]
name = aoc
version = 0.0.1
description = Library for Advent of Code
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Private :: Do Not Upload


[options]
python_requires = >=3.6
packages = find:
include_package_data=True
install_requires =
    requests
    requests_html
    attrs
    python-dotenv==0.19.2
    pendulum
    click

[options.packages.find]
# Only install aoc, and subpackages in aoc
include=aoc*

[options.entry_points]
console_scripts =
    aoc = aoc.cli.cli:cli

